--- a/pomsky-syntax/Cargo.toml
+++ b/pomsky-syntax/Cargo.toml
@@ -18,6 +18,7 @@ categories = ["text-processing", "parser-implementations"]
 default = []
 dbg = []
 suggestions = ["dep:strsim"]
+arbitrary = ["dep:arbitrary"]
 
 [dependencies]
 strsim = { version = "0.10.0", optional = true }
