--- a/pomsky-macro/Cargo.toml
+++ b/pomsky-macro/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pomsky-macro"
 description = "Macro for converting pomsky expressions to regexes"
 version = "0.11.0"
-edition = "2021"
+edition.workspace = true
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/pomsky-lang/pomsky/blob/main/pomsky-macro"
