--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
 ]
 default-members = ["./pomsky-bin", "./pomsky-lib", "./pomsky-syntax"]
 resolver = "2"
+package.edition = "2021"
 
 [profile.release]
 lto = "thin"
