feat: test command

--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -29,9 +29,11 @@ helptext = { version = "0.1.0", path = "../helptext" }
 serde_json = "1.0.91"
 serde = { version = "1.0.152", features = ["derive"] }
 pcre2 = { version = "0.2.5", optional = true }
+ignore = "0.4.23"
 
 [dependencies.miette]
-version = "5.10.0"
+version = "7.4.0"
+default-features = false
 features = ["fancy-no-backtrace"]
 
 [dependencies.pomsky]
