--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -26,9 +26,9 @@ pomsky-syntax = { version = "0.11.0", path = "../pomsky-syntax" }
 arbitrary = { version = "1.3.1", features = ["derive"], optional = true }
 
 [dependencies.miette]
-version = "5.10.0"
+version = "7.4.0"
 optional = true
-features = ["fancy-no-backtrace"]
+default-features = false
 
 [dev-dependencies]
 lexopt = "0.3.0"
