--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -20,16 +20,17 @@ path = "src/main.rs"
 
 [features]
 default = ["test"]
-test = ["dep:pcre2"]
+test = ["dep:pcre2", "dep:regex", "dep:ignore"]
 
 [dependencies]
 lexopt = "0.3.0"
-supports-color = "2.0.0"
+supports-color = "3.0.2"
 helptext = { version = "0.1.0", path = "../helptext" }
 serde_json = "1.0.91"
 serde = { version = "1.0.152", features = ["derive"] }
 pcre2 = { version = "0.2.5", optional = true }
-ignore = "0.4.23"
+regex = { version = "1.11.1", optional = true }
+ignore = { version = "0.4.23", optional = true }
 
 [dependencies.miette]
 version = "7.4.0"
