feat: write "the Pomsky developers" instead of my name

--- a/helptext/Cargo.toml
+++ b/helptext/Cargo.toml
@@ -3,7 +3,7 @@ name = "helptext"
 description = "Create beautiful help messages"
 version = "0.1.1"
 edition.workspace = true
-authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
+authors = ["Pomsky developers <info@pomsky-lang.org>"]
 repository = "https://github.com/pomsky-lang/pomsky/tree/main/helptext"
 readme = "README.md"
 keywords = ["help", "colors"]
