--- a/pomsky-macro/Cargo.toml
+++ b/pomsky-macro/Cargo.toml
@@ -3,7 +3,7 @@ name = "pomsky-macro"
 description = "Macro for converting pomsky expressions to regexes"
 version = "0.11.0"
 edition.workspace = true
-authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
+authors = ["Pomsky developers <info@pomsky-lang.org>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/pomsky-lang/pomsky/blob/main/pomsky-macro"
 repository = "https://github.com/pomsky-lang/pomsky"
