--- a/pomsky-syntax/Cargo.toml
+++ b/pomsky-syntax/Cargo.toml
@@ -3,7 +3,7 @@ name = "pomsky-syntax"
 description = "Parser for pomsky, a new regular expression language"
 version = "0.11.0"
 edition.workspace = true
-authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
+authors = ["Pomsky developers <info@pomsky-lang.org>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://pomsky-lang.org"
 repository = "https://github.com/pomsky-lang/pomsky"
