--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -3,7 +3,7 @@ name = "pomsky-bin"
 description = "Compile pomsky expressions, a new regular expression language"
 version = "0.11.0"
 edition.workspace = true
-authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
+authors = ["Pomsky developers <info@pomsky-lang.org>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://pomsky-lang.org/"
 repository = "https://github.com/pomsky-lang/pomsky"
@@ -11,6 +11,15 @@ readme = "README.md"
 keywords = ["regexp", "regex", "pomsky"]
 categories = ["text-processing", "command-line-utilities"]
 
+[package.metadata.wix]
+upgrade-guid = "05169652-50F7-4B36-B5E5-677EFD6885FB"
+path-guid = "87E01AEC-EB08-449F-A80E-F4286E3B1EDC"
+license = false
+eula = false
+
+[package.metadata.dist]
+npm-scope = "@pomsky-lang"
+npm-package = "cli"
 
 [[bin]]
 name = "pomsky"
