--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -7,7 +7,7 @@ name = "compiler-web"
 description = "A portable, modern regular expression language"
 homepage = "https://pomsky-lang.org"
 version = "0.11.0"
-authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
+authors = ["Pomsky developers <info@pomsky-lang.org>"]
 edition.workspace = true
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/pomsky-lang/pomsky"
