--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,15 +34,6 @@ jobs:
         with:
           components: clippy
 
-      - name: ⚡ Cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
@@ -68,17 +59,18 @@ jobs:
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
-        if: ${{ matrix.os == 'ubuntu-latest' }}
         with:
           dotnet-version: '8.x.x'
+
+      - name: Install dotnet-script
+        run: |
+          dotnet tool install --global dotnet-script
+          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
 
       - name: Build and run tests
         run: env PCRE2_SYS_STATIC=1 cargo test
