--- a/pomsky-syntax/Cargo.toml
+++ b/pomsky-syntax/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Pomsky developers <info@pomsky-lang.org>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://pomsky-lang.org"
 repository = "https://github.com/pomsky-lang/pomsky"
-documentation = "https://docs.rs/pomsky"
+documentation = "https://docs.rs/pomsky-syntax"
 readme = "../README.md"
 keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
 categories = ["text-processing", "parser-implementations"]
@@ -21,7 +21,7 @@ suggestions = ["dep:strsim"]
 arbitrary = ["dep:arbitrary"]
 
 [dependencies]
-strsim = { version = "0.10.0", optional = true }
+strsim = { version = "0.11.1", optional = true }
 
 [dependencies.arbitrary]
 version = "1.3.1"
