--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -26,9 +26,10 @@ pomsky-syntax = { version = "0.12.0", path = "../pomsky-syntax" }
 arbitrary = { version = "1.3.1", features = ["derive"], optional = true }
 
 [dependencies.miette]
-version = "7.4.0"
+version = "7.6.0"
 optional = true
 default-features = false
+features = ["fancy-no-backtrace"]
 
 [dev-dependencies]
 lexopt = "0.3.0"
